# NodeOne

./: .gitignore  pyproject.toml
src/nodeone/: app.py
src/nodeone/models/: settings.py
src/nodeone/plugins/dashboard/: plugin.py
src/nodeone/resources/themes/: dark.qss  light.qss
src/nodeone/services/: event_bus.py  plugin_manager.py  theme_manager.py
src/nodeone/utils/: logger.py
src/nodeone/views/: main_window.py
src/nodeone/views/components/: navbar.py  tag_input.py
src/nodeone/workers/: api_worker.py
tests/: test_manager.py
